# indigoshell

./: README.md  main.py  pyproject.toml
indigoshell/: api.py  app.py  config_default.py  style.py  theme.py
indigoshell/core/: client.py  daemon.py  ipc.py  paths.py  pipeline.py  registry.py  singleton.py  store.py
indigoshell/helpers/: __init__.py  command_panel.py  layout.py  power.py  profile.py
indigoshell/helpers/flows/display/: __init__.py  query.py  set.py
indigoshell/services/: beat.py  cava_raw.conf  dbusmenu.py  icon.py  music.py  notifications.py  proc.py  sysinfo.py  systray.py  text_effects.py
indigoshell/widgets/: __init__.py  bar_meter.py  base.py  battery_meter.py  calendar.py  clock.py  hardware_panel.py  hud.py  layout.py  line_graph.py  media.py  menu.py  network.py  network_panel.py  notification.py  panel.py  stat_meter.py  stdout_text.py  systag.py  systray.py  term_toast.py  terminal.py  volume.py  workspaces.py
indigoshell/windows/: bar.py  base.py  color_picker.py  notification.py  popup.py
