[project]
name = "indigoshell"
version = "0.1.0"
description = "A widget-engine desktop shell"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
    "pygobject>=3.56.3",
    "python-xlib>=0.33",
    "watchdog>=6.0.0",
]

[project.scripts]
indigoshell = "indigoshell.app:main"
